delete button not visible fix

--- a/apps/dev-workbench/createAlgo/bench.css
+++ b/apps/dev-workbench/createAlgo/bench.css
@@ -43,7 +43,6 @@
 .advancedInitialSettings,
 .advancedLayersSettings,
 #layersEditor,
-#deleteLayer,
 #userTrain,
 #trainingLoading,
 #nextStepButton,
